# polyportal

./: .gitignore  Cargo.toml  Makefile  README.md  config.toml  foundry.toml  hardhat.config.js  package.json
cli/: .gitignore  Cargo.toml  README.md  config.example.toml
cli/src/: config.rs  crypto.rs  main.rs
contracts/: PolyEndpoint.sol
scripts/: deploy.js
sdk/: .gitignore  Cargo.toml  Makefile  README.md  config.example.toml
sdk/examples/: basic.rs  client.rs  query_base_sepolia_final.rs  test_base.rs
sdk/scripts/: test_base_example.sh  test_contract.sh  test_integration.sh
sdk/src/: abi.rs  client.rs  contract.rs  endpoint.rs  http_impl.rs  lib.rs  simple_client.rs  wasm.rs
sdk/src/contract/: abi.rs
sdk/src/http_impl/: native.rs  native_impl.rs  wasm.rs  wasm_impl.rs
sdk/tests/: base_sepolia.rs  integration_test.rs  local_test.rs  wasm_test.rs
test/: PolyEndpoint.test.js
test-forge/: PolyEndpoint.t.sol
