[package]
name = "polyportal-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "polyportal-cli"
path = "src/main.rs"

[dependencies]
ethers = { version = "2.0", features = ["rustls", "ws"] }
ethers-middleware = "2.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
hex = "0.4"
clap = { version = "4.0", features = ["derive"] }
aes-gcm = "0.10"
sha2 = "0.10"
rpassword = "7.3"
rand = "0.8"
