[package]
name = "polyportal-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "polyportal-cli"
path = "src/main.rs"

[dependencies]
ethers = { workspace = true, features = ["rustls", "ws"] }
ethers-middleware = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
clap = { workspace = true }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
rpassword = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
polyendpoint-sdk = { path = "../sdk", default-features = false, features = ["std"] }
