[package]
name = "polyendpoint-sdk"
version = "0.1.0"
edition = "2021"

[lib]
name = "polyendpoint_sdk"
crate-type = ["cdylib", "rlib"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "query"
path = "examples/query_base_sepolia_final.rs"

[features]
default = ["std"]
std = ["serde", "serde_json"]
ethers = ["ethers-core", "ethers-providers"]

# Core dependencies
[dependencies]
hex = "0.4"
sha3 = "0.10"

# Optional std features
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# Ethers dependencies (optional, for native RPC client)
ethers-core = { version = "2.0", optional = true, default-features = false }
ethers-providers = { version = "2.0", optional = true, default-features = false }
ethers-middleware = { version = "2.0", optional = true, default-features = false }
ethers-signers = { version = "2.0", optional = true, default-features = false }

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }

# WASM test dependencies
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]

