[package]
name = "polyendpoint-sdk"
version = "0.1.0"
edition = "2021"

[lib]
name = "polyendpoint_sdk"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hex encoding/decoding
hex = "0.4"

# Error handling
thiserror = "1"

# Async runtime
async-trait = "0.1"

# Ethers for ABI encoding/decoding
ethers = { version = "2.0", default-features = false }

# WASM support (only when compiled for WASM)
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

# Web APIs for WASM
web-sys = { version = "0.3", optional = true, features = [
    "Window",
    "Response",
    "Request",
    "RequestInit",
    "RequestMode",
    "RequestCredentials",
    "Headers",
] }

# Native HTTP client  
reqwest = { version = "0.11", optional = true, default-features = false, features = ["rustls-tls"] }

# WASM HTTP client
reqwest-wasm = { version = "0.11", optional = true, features = ["json", "rustls-tls"], default-features = false }

[features]
default = ["std"]
std = []

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "test_base"
path = "examples/test_base.rs"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Response",
    "Request",
    "RequestInit",
    "RequestMode",
    "RequestCredentials",
    "Headers",
    "console",
] }
getrandom = { version = "0.2", features = ["js"] }
reqwest-wasm = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"
harness = true

[[test]]
name = "local_test"
path = "tests/local_test.rs"
harness = true

[[test]]
name = "wasm_test"
path = "tests/wasm_test.rs"
harness = true

